...

        <View style={styles.buttonsContainer}>
          <Text style={styles.title}>Getting around campus</Text>
          <View style={styles.buttonContainer}>
            <TouchableOpacity
              style={styles.button}
              testID="sgwButton"
              onPress={() =>
                handleNavigationPress("/(tabs)/map?type=sgw", "SGW Campus")
              }
            >
              <Text style={[styles.buttonText, { color: theme.text }]}>
                SGW Campus
...

        <View style={styles.buttonsContainer}>
          <Text style={styles.title}>View My Calendar</Text>
          <View style={styles.buttonContainer}>
            <TouchableOpacity
              style={styles.googleButton}
              testID="calendarfetchbutton"
              onPress={() =>
                handleNavigationPress(
                  "screens/CalendarFetching",
                  "Connect Calendars"
                )
              }
...
