...
        <View style={styles.container}>
          <View style={styles.redContainer}>
            <View style={styles.whiteContainer}>
              <Text style={styles.title}>Enter your Google Calendar ID</Text>
              <TextInput
                style={styles.input}
                placeholder="Paste Calendar ID here"
                value={calendarId}
                onChangeText={setCalendarId}
                placeholderTextColor="#666"
              />
              <TouchableOpacity
                style={styles.connectButton}
                onPress={fetchCalendarEvents}
                disabled={loading}
              >
                <Text style={styles.buttonText}>
                  {loading ? "Connecting..." : "Connect"}
                </Text>
              </TouchableOpacity>

              <TouchableOpacity
                style={styles.connectButton}
                onPress={() => setModalVisible(true)}
...
