...
            <TouchableOpacity
              style={styles.nextClassDirections}
              onPress={() => {
                handleButtonPress(null, "Getting directions to next class");
                findNextClass();
              }}
              testID="get-directions-button"
            >
              <MaterialIcons
                name="directions"
                size={24}
                color="white"
                style={{ marginRight: 8 }}
...
