...
          <Ionicons name="chevron-back-circle" size={32} color="white" />
        </TouchableOpacity>
        <Text style={styles.pageName}>Accessibility</Text>
        <TouchableOpacity
          accessibilityRole="button"
          onPress={() => router.push('/screens/ShuttleInfoPage')}
          testID="nextPageButton"
        >
          <Ionicons name="chevron-forward-circle" size={32} color="white" />
        </TouchableOpacity>
      </View>
    </View>
  );
...
