...
      {/* Position Buttons */}
      <View style={indoorMapStyles.positionButtonsContainer}>
        {/* User Location Button */}
        <TouchableOpacity
          style={indoorMapStyles.positionButton}
          onPress={centerMapOnUser}
          testID="locate-me-button"
        >
          <MaterialIcons name="my-location" size={24} color="black" />
        </TouchableOpacity>

        {/* Campus Location Button */}
        <TouchableOpacity
          style={indoorMapStyles.positionButton}
          onPress={centerMapOnCampus}
          testID="locate-campus-button"
        >
          <MaterialIcons name="location-on" size={24} color="black" />
          <Text style={indoorMapStyles.campusButtonText}>
            {activeCampus === "sgw" ? "SGW" : "LOY"}
          </Text>
        </TouchableOpacity>
...
      <View style={indoorMapStyles.switchCampusButton}>
        <TouchableOpacity
          disabled={isExpanded}
          onPress={toggleCampus}
          style={isExpanded ? indoorMapStyles.disabledButton : null}
        >
          <Text style={indoorMapStyles.text}>Switch Campus</Text>
        </TouchableOpacity>
      </View>

      {/* Shuttle Button */}
      <View style={outdoorMapStyles.shuttleButtonContainer}>
        <TouchableOpacity
...
          <Image
            source={require("../../assets/images/icon-for-shuttle.png")}
            resizeMode="contain"
            style={outdoorMapStyles.shuttleIcon}
          />
          <Text style={outdoorMapStyles.switchButtonText}>
            {activeCampus === "sgw" ? "Shuttle To Loyola" : "Shuttle To SGW"}
          </Text>
        </TouchableOpacity>
      </View>

      {/* POI Filter Button */}
      {showPOI && (
...
