appId: com.anonymous.myApp  
---
- launchApp

# Select SGW
- tapOn:
    id: "sgwButton"

# Tap on a building in SGW
- tapOn:
    id: "card:com.anonymous.myApp:sceneID:com.anonymous.myApp-default"

# Close the building pop-up
- tapOn:
    point: "91%,31%"

# Switch to Loyola Campus
- tapOn: "Switch Campus"

# Tap on a building in Loyola
- tapOn:
    id: "card:com.anonymous.myApp:sceneID:com.anonymous.myApp-default"

# Close the Loyola building pop-up
- tapOn:
    point: "90%,29%"
# myLocation
- tapOn:
    id: "locate-me-button"
    
# go back to campus 
- tapOn:
    id: "locate-campus-button"

# shuttle 
- tapOn: "Shuttle To SGW"

# close
- tapOn:
   point: 90%,43%